[NF] add jsoup library Использование jsoup для парсинга элементов

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 logging.level.root=INFO
-logging.level.ru.agk13145.projects.htmlpageanalyzer=DEBUG
+logging.level.ru.agk13145.projects.htmlpageanalyzer=TRACE
