--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 logging.level.root=INFO
 logging.level.ru.agk13145.projects.htmlpageanalyzer=TRACE
+
+app.db.worker.driver=org.postgresql.Driver
+app.db.worker.url=jdbc:postgresql://localhost:5432/pageanalyzer
+app.db.worker.username=postgres
+app.db.worker.password=adminadmin
