--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <slf4j.version>1.7.25</slf4j.version>
         <postgresql.version>42.2.19</postgresql.version>
         <liquibase.version>3.10.3</liquibase.version>
+        <gson.version>2.8.5</gson.version>
     </properties>
 
     <dependencies>
@@ -78,6 +79,12 @@
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
         </dependency>
     </dependencies>
 
