--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ app.db.worker.driver=org.postgresql.Driver
 app.db.worker.url=jdbc:postgresql://localhost:5432/pageanalyzer
 app.db.worker.username=postgres
 app.db.worker.password=adminadmin
+
+spring.liquibase.enabled=false
