--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <postgresql.version>42.2.19</postgresql.version>
         <liquibase.version>3.10.3</liquibase.version>
         <gson.version>2.8.5</gson.version>
+        <jsoup.version>1.14.1</jsoup.version>
     </properties>
 
     <dependencies>
@@ -61,7 +62,7 @@
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.14.1</version>
+            <version>${jsoup.version}</version>
         </dependency>
 
         <!--logger-->
