[RF] рефакторинг Добавление инструкции

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.root=INFO
+logging.level.root=ERROR
 logging.level.ru.agk13145.projects.htmlpageanalyzer=TRACE
 
 app.db.worker.driver=org.postgresql.Driver
@@ -7,3 +7,10 @@ app.db.worker.username=postgres
 app.db.worker.password=adminadmin
 
 spring.liquibase.enabled=false
+
+#write log to app.log
+logging.file.name=app.log
+# Logging pattern for the console
+logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
+# Logging pattern for file
+logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
