--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 logging.level.root=ERROR
-logging.level.ru.agk13145.projects.htmlpageanalyzer=TRACE
+logging.level.ru.agk13145.projects.htmlpageanalyzer=DEBUG
 
 app.db.worker.driver=org.postgresql.Driver
 app.db.worker.url=jdbc:postgresql://localhost:5432/pageanalyzer
@@ -11,6 +11,6 @@ spring.liquibase.enabled=false
 #write log to app.log
 logging.file.name=app.log
 # Logging pattern for the console
-logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} [%-5level] - %msg%n
 # Logging pattern for file
 logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
